# dumper

./: .gitignore  LICENSE.txt  README.md  generate_test_data.py  pyproject.toml
dumper/: __init__.py  cli.py  output.py  parser.py  processor.py  ui.py
